setup game 01 page and greeting route and page for greeting after game

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,15 @@
   /* font-weight: 400;
   font-style: normal; */
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* //loader css  */
 .loader_loading {
     width: 65px;
