--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,9 @@
 
     
 }
+body{
+  overflow-x: hidden;
+}
  .shadow-custom{
   box-shadow: 4px 2px 4px 2px #00000040;
  }
@@ -21,14 +24,7 @@
   /* font-weight: 400;
   font-style: normal; */
 }
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+
 
 /* //loader css  */
 .loader_loading {
